--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 resolver = "2"
 members = ["contracts/*"]
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+license = "MIT OR Apache-2.0"
+
+[workspace.dependencies]
+soroban-sdk = "21.7.7"
+soroban-token-sdk = "21.7.7"
+
 [profile.release]
 opt-level = "z"
 overflow-checks = true
