--- a/contracts/payroll/Cargo.toml
+++ b/contracts/payroll/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "payroll"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-soroban-sdk = "21.0.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
+doctest = false
+
+[dependencies]
+soroban-sdk = { workspace = true }
+
+[dev-dependencies]
+soroban-sdk = { workspace = true, features = ["testutils"] }
