feat: add end-to-end integration test suite (issue #7)
Implements the full protocol flow test covering the
Registry → Commitment → Verifier → Payroll Execution pipeline.

New:
- contracts/integration_tests/ — dedicated E2E test crate with 4 tests:
  * test_e2e_full_payroll_flow: registers company, onboards Alice with
    Poseidon_Hash(salary=5000, blinding=123), executes mock Groth16 proof,
    asserts treasury decreases by 5000 and Alice's balance increases by 5000,
    verifies payment_executed event and nullifier recorded
  * test_unregistered_employee_cannot_be_paid: unauthorized execution guard
  * test_double_payment_rejected: nullifier reuse prevention
  * test_mismatched_arrays_rejected: input validation guard

Changed:
- contracts/token: implement persistent balance tracking (mint/transfer/balance)
  so integration tests can assert real balance changes
- contracts/payroll: store admin address; enforce admin.require_auth() on
  batch_process_payroll; emit payment_executed event per processed employee
- contracts/payroll/Cargo.toml: add rlib crate-type (required for library import)
- contracts/payroll_registry/Cargo.toml: add rlib crate-type (same reason)
- contracts/payroll tests: mint tokens to treasury before batch execution

--- a/contracts/payroll/Cargo.toml
+++ b/contracts/payroll/Cargo.toml
@@ -11,7 +11,7 @@ salary_commitment = { path = "../salary_commitment" }
 token = { path = "../token" }
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 doctest = false
 
 [dev-dependencies]
