ci: add rust-fmt and clippy workflow
* ci: add rust-fmt and clippy workflow for Soroban contracts (closes #3)

- Add .github/workflows/rust-fmt-clippy.yml with two steps:
  cargo fmt --all -- --check and cargo clippy --workspace
  --all-targets --all-features -- -D warnings
- Use actions-rust-lang/setup-rust-toolchain@v1 (stable ≥ 1.74)
  with rustfmt and clippy components
- Use Swatinem/rust-cache@v2 to cache Cargo registry and target/
  between runs, reducing PR merge times
- Fix root Cargo.toml: add missing [workspace.package] and
  [workspace.dependencies] sections required by all contracts
- Migrate payroll and token crates to workspace inheritance
  (version, edition, license, soroban-sdk)
- Apply cargo fmt --all to bring all contract sources into
  compliance with rustfmt canonical style

* chore: remove unused dependencies from Cargo.toml files in payroll and token contracts

* chore: clean up code by removing unused parameters and adjusting linting rules

* refactor: rename initialize function to initialize_verifier for clarity

* refactor: update test cases to use initialize_verifier for consistency

* feat: add end-to-end integration test suite (issue #7)

Implements the full protocol flow test covering the
Registry → Commitment → Verifier → Payroll Execution pipeline.

New:
- contracts/integration_tests/ — dedicated E2E test crate with 4 tests:
  * test_e2e_full_payroll_flow: registers company, onboards Alice with
    Poseidon_Hash(salary=5000, blinding=123), executes mock Groth16 proof,
    asserts treasury decreases by 5000 and Alice's balance increases by 5000,
    verifies payment_executed event and nullifier recorded
  * test_unregistered_employee_cannot_be_paid: unauthorized execution guard
  * test_double_payment_rejected: nullifier reuse prevention
  * test_mismatched_arrays_rejected: input validation guard

Changed:
- contracts/token: implement persistent balance tracking (mint/transfer/balance)
  so integration tests can assert real balance cha

--- a/contracts/payroll/Cargo.toml
+++ b/contracts/payroll/Cargo.toml
@@ -11,4 +11,8 @@ salary_commitment = { path = "../salary_commitment" }
 token = { path = "../token" }
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
+doctest = false
+
+[dev-dependencies]
+soroban-sdk = { workspace = true, features = ["testutils"] }
