--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -4,8 +4,12 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+doctest = false
+
 [dependencies]
 soroban-sdk = { workspace = true }
 
-[lib]
-crate-type = ["cdylib", "rlib"]
+[dev-dependencies]
+soroban-sdk = { workspace = true, features = ["testutils"] }
