--- a/.github/workflows/rust-test-build.yml
+++ b/.github/workflows/rust-test-build.yml
@@ -32,6 +32,9 @@ jobs:
           key: ${{ runner.os }}-cargo-build-test-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-build-test-
 
+      - name: Install Soroban CLI dependencies
+        run: sudo apt-get update && sudo apt-get install -y libdbus-1-dev pkg-config
+
       - name: Install Soroban CLI
         run: cargo install --locked soroban-cli
 
