--- a/.github/workflows/rust-test-build.yml
+++ b/.github/workflows/rust-test-build.yml
@@ -36,9 +36,9 @@ jobs:
         run: |
           curl -sSL -o stellar-cli.tar.gz https://github.com/stellar/stellar-cli/releases/download/v25.1.0/stellar-cli-25.1.0-x86_64-unknown-linux-gnu.tar.gz
           tar -xzf stellar-cli.tar.gz
-          sudo mv stellar /usr/local/bin/soroban-cli
-          sudo chmod +x /usr/local/bin/soroban-cli
-          soroban-cli version
+          sudo mv stellar /usr/local/bin/soroban
+          sudo chmod +x /usr/local/bin/soroban
+          soroban version
 
       - name: Run unit tests
         run: cargo test --workspace
