test(security): add CEI and payment double-spend/batch tests
- Fixed execute_payment to respect the Checks-Effects-Interactions bounds, writing state before external token invocation.
- Added comprehensive adversarial security tests test_double_spend_proof_reuse_fails and test_batch_array_length_mismatch_fails.
- Added testutils build feature flag.

--- a/contracts/payment_executor/Cargo.toml
+++ b/contracts/payment_executor/Cargo.toml
@@ -14,3 +14,6 @@ soroban-token-sdk = { workspace = true }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
+
+[features]
+testutils = ["soroban-sdk/testutils"]
